--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.2",
+    "confetti": "^2.0.6",
     "crypto-js": "^4.2.0",
     "firebase": "^11.6.0",
     "js-confetti": "^0.12.0",
     "lucide": "^0.487.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.1.2"
